Fix code wrapping
Closes https://github.com/gleam-lang/website/issues/207

--- a/styles/main.css
+++ b/styles/main.css
@@ -138,7 +138,6 @@ code {
 }
 
 p code {
-  white-space: nowrap;
   opacity: 0.7;
 }
 
